--- a/20181120_test/src/blocks/btns/btns.sass
+++ b/20181120_test/src/blocks/btns/btns.sass
@@ -6,31 +6,54 @@
 	display: -o-flex
 	display: flex
 	justify-content: flex-end
-	height: 40px;
-	min-height: 40px;
-	padding-right: 20px;
-	z-index: 100;
-	overflow: hidden;
+	height: 40px
+	min-height: 40px
+	padding-right: 20px
+	z-index: 100
+	overflow: hidden
+	cursor: pointer
+
+	&__wrapper
+		width: 40px;
+		height: 40px;
+		transform: rotate(90deg)
+
+	@media screen and (max-width: 812px)
+		padding-right: 10px
 
 .pc-gn-menustate
 	opacity: 0;
 	display: none;
 
+.pc-ln-ac
+	width: 100%
+
 #pc-ln-menustate:checked ~ .move-arrow .pc-ln-menucta-chevron, 
 #pc-ln-menustate:target ~ .move-arrow .pc-ln-menucta-chevron 
 	-webkit-transform: translateY(-10%);
 	-ms-transform: translateY(-10%);
-	transform: translateY(-10%);
+	transform: translateY(-4%);
 
+.pc-ln-action
+	width: 100%
+	text-align: right
 
 .pc-ln-menucta
 	cursor: pointer;
 	display: block;
+	display: -webkit-flex
+	display: -moz-flex
+	display: -ms-flex
+	display: -o-flex
+	display: flex
+	justify-content: flex-end
 	overflow: hidden;
 	width: 40px;
+	width: 100%;
 	height: 40px;
+	height: 100%;
 	-webkit-tap-highlight-color: transparent
-	transform: rotate(90deg)
+	
 	z-index: 100;
 
 	&-chevron
@@ -43,10 +66,12 @@
 		transition: -webkit-transform 1s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
 		transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1), transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
 		transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1), transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform 1s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1), -ms-transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
-		-webkit-transform: translateY(10%);
-		-ms-transform: translateY(10%);
+		-webkit-transform: translateY(4%);
+		-ms-transform: translateY(4%);
 		transform: translateY(4%);
-		margin-top: -10px
+
+		@media screen and (max-width: 812px)
+			transform: translateY(-27%)
 
 		&:nth-of-type(2)
 			margin-top: -21px;
@@ -56,6 +81,7 @@
 			content: "";
 			display: block;
 			position: absolute;
+			// transform: rotate(90deg)
 			top: 50%;
 			width: 20px;
 			height: 2px;
@@ -65,19 +91,27 @@
 			transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1), transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
 			transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1), transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform 1s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1), -ms-transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
 
+
 		&::before
 			right: 50%
-
 			-webkit-transform-origin: 100% 100%;
 			-ms-transform-origin: 100% 100%;
 			transform-origin: 100% 100%;
 			-webkit-transform: rotate(40deg) scaleY(1.5);
 			-ms-transform: rotate(40deg) scaleY(1.5);
+			// transform: rotate(40deg) scaleY(1.5);
 			transform: rotate(40deg) scaleY(1.5);
+
+			@media screen and (max-width: 812px)
+				-webkit-transform-origin: 100% 0%;
+				-ms-transform-origin: 100% 0%;
+				transform-origin: 100% 0%;
+				-webkit-transform: rotate(-40deg) scaleY(1.5);
+				-ms-transform: rotate(-40deg) scaleY(1.5);
+				transform: rotate(-40deg) scaleY(1.5);
 
 		&::after
 			left: 50%
-
 			-webkit-transform-origin: 0% 100%;
 			-ms-transform-origin: 0% 100%;
 			transform-origin: 0% 100%;
@@ -85,12 +119,27 @@
 			-ms-transform: rotate(-40deg) scaleY(1.5);
 			transform: rotate(-40deg) scaleY(1.5);
 
+			@media screen and (max-width: 812px)
+				-webkit-transform-origin: 0% 0%;
+				-ms-transform-origin: 0% 0%;
+				transform-origin: 0% 0%;
+				-webkit-transform: rotate(40deg) scaleY(1.5);
+				-ms-transform: rotate(40deg) scaleY(1.5);
+				transform: rotate(40deg) scaleY(1.5) 
+
+
 
 #pc-ln-menustate:checked~.move-arrow .pc-ln-menucta-chevron,
 #pc-ln-menustate:target~.move-arrow .pc-ln-menucta-chevron
 	-webkit-transform: translateY(-27%);
 	-ms-transform: translateY(-27%);
 	transform: translateY(-27%);
+
+	// @media screen and (max-width: 812px)
+		// -webkit-transform: translateY(-10%);
+		// -ms-transform: translateY(-10%);
+		// transform: translateY(-10%);
+
 
 #pc-ln-menustate:checked~.move-arrow .pc-ln-menucta-chevron::after,
 #pc-ln-menustate:target~.move-arrow .pc-ln-menucta-chevron::after 
@@ -101,6 +150,14 @@
 	-ms-transform: rotate(40deg) scaleY(1.5);
 	transform: rotate(40deg) scaleY(1.5) 
 
+	// @media screen and (max-width: 812px)
+	// 	-webkit-transform-origin: 0% 100%;
+	// 	-ms-transform-origin: 0% 100%;
+	// 	transform-origin: 0% 100%;
+	// 	-webkit-transform: rotate(-40deg) scaleY(1.5);
+	// 	-ms-transform: rotate(-40deg) scaleY(1.5);
+	// 	transform: rotate(-40deg) scaleY(1.5);
+
 #pc-ln-menustate:checked~.move-arrow .pc-ln-menucta-chevron::before,
 #pc-ln-menustate:target~.move-arrow .pc-ln-menucta-chevron::before 
 	-webkit-transform-origin: 100% 0%;
@@ -109,6 +166,14 @@
 	-webkit-transform: rotate(-40deg) scaleY(1.5);
 	-ms-transform: rotate(-40deg) scaleY(1.5);
 	transform: rotate(-40deg) scaleY(1.5);
+
+	// @media screen and (max-width: 812px)
+	// 	-webkit-transform-origin: 100% 100%;
+	// 	-ms-transform-origin: 100% 100%;
+	// 	transform-origin: 100% 100%;
+	// 	-webkit-transform: rotate(40deg) scaleY(1.5);
+	// 	-ms-transform: rotate(40deg) scaleY(1.5);
+	// 	transform: rotate(40deg) scaleY(1.5);
 
 input[type="checkbox"] 
 	width: 16px;
