--- a/20181120_test/src/blocks/info-panel/info-panel.sass
+++ b/20181120_test/src/blocks/info-panel/info-panel.sass
@@ -28,6 +28,7 @@
 			background: transparent !important;
 			border: 0 !important;
 			box-shadow: none !important;
+			color: inherit;
 
 	i
 		display: flex
