--- a/20181120_test/src/blocks/navmenu/navmenu.sass
+++ b/20181120_test/src/blocks/navmenu/navmenu.sass
@@ -4,6 +4,12 @@
 	overflow-y: auto
 
 	a
+		display: -webkit-flex
+		display: -moz-flex
+		display: -ms-flex
+		display: -o-flex
+		display: flex !important
+		justify-content: center
 		width: 100%
 		padding: 18px 20px
 		display: block
@@ -22,7 +28,8 @@
 			text-decoration: none
 
 		i
-			margin-right: 20px
+			// margin-right: 20px
+			margin-right: 0
 			font-size: 1.2em
 
 
